# blog-agent

./: .env.example  .gitignore  CLAUDE.md  DEVELOPMENT.md  README.md  SECURITY.md  WORKFLOW.md  append-development.js  package-lock.json  package.json  publish.js  publish_simple.py  pyproject.toml  retroactive-apply.js  run.js  run.sh  session7-content.md  translate_and_publish.js  update-ghost-thumbnails.js  update_post.js
.claude/: settings.local.json
.claude/skills/ghost-publish/: SKILL.md
.claude/skills/git-workflow/: SKILL.md
.claude/skills/korean-rewriter/: SKILL.md
.claude/skills/skill-generator/: SKILL.md
.claude/skills/thumbnail-generator/: SKILL.md
.claude/skills/translate-article/: SKILL.md
output/: _backup-original-20251229-215035.md  _backup-translation-20251229-215035.md  original-good-writing-20251230-023158.md  original-how-to-be-successful-20251229-180500.md  original-putting-ideas-into-words-20251230-093624.md  original-the-shape-of-the-essay-field-20251229-180700.md  original-the-simplest-way-to-test-if-your-solution-makes-se-20251229-202708.md  temp-goodwriting.html  translation-good-writing-20251229-215541.md  translation-good-writing-20251230-023158.md  translation-putting-ideas-into-words-20251230-093624.md  translation-the-shape-of-the-essay-field-20251230-092836.md  translation-the-simplest-way-to-test-if-your-solution-makes-se-20251229-202708.md  translation.md
src/blog_agent/: __init__.py  cli.py
src/blog_agent/core/: __init__.py  agent.py  config.py  skill.py
src/blog_agent/integrations/: __init__.py  (+1 more)
tests/: __init__.py
(+14 files in other folders)
