[tool.poetry]
name = "blog-agent"
version = "0.1.0"
description = "CLI tool to translate articles and publish to Ghost blog"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "blog_agent", from = "src"}]

[tool.poetry.scripts]
blog-agent = "blog_agent.cli:main"

[tool.poetry.dependencies]
python = "^3.11"
ghost-client = "^0.0.6"
python-dotenv = "^1.0.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
markdown = "^3.5.0"
beautifulsoup4 = "^4.12.0"
trafilatura = "^1.12.0"
httpx = "^0.27.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
ruff = "^0.1.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
